# navik

./: CMakeLists.txt  README.md  index.html  main.cpp  navik.cpp  run.sh
css/: CoordIndicator.css  DepthIndicator.css  DepthMeter.css  SogCogIndicator.css  WindIndicator.css  WindMeter.css  basePane.css  day.css  index.css  night.css  subPane.css
js/: Choice.js  CoordIndicator.js  DepthIndicator.js  DepthMeter.js  SogCogIndicator.js  Svg.js  WindIndicator.js  WindMeter.js  index.js  router.js  ws.js
logger/: Logger.cpp  Logger.h
